# tk_r_em

./: .gitignore  Dockerfile.cpu  MANIFEST.in  README.md  app.py  docker-compose.yml  example_exp_batch_data.py  example_exp_data.py  example_exp_patch_data.py  example_exp_single_data.py  example_sgl_exp_data.py  example_sim_data.py  pyproject.toml  requirements.txt  run_example.py  setup.py
docker/: Dockerfile.cpu  Dockerfile.cuda  docker-compose.yml  docker_guide.md
models/hrsem/: fingerprint.pb
models/hrsem/variables/: variables.index
models/hrstem/: fingerprint.pb
models/hrstem/variables/: variables.index
models/hrtem/: fingerprint.pb  keras_metadata.pb
models/hrtem/variables/: variables.index
models/lrsem/: fingerprint.pb
models/lrsem/variables/: variables.index
models/lrstem/: fingerprint.pb
models/lrstem/variables/: variables.index
models/lrtem/: fingerprint.pb
models/lrtem/variables/: variables.index
tk_r_em/: __init__.py  file_io.py  tk_r_em.py  version.py
tk_r_em/models/sfr_hrsem/: fingerprint.pb
tk_r_em/models/sfr_hrsem/variables/: variables.index
tk_r_em/models/sfr_hrstem/: fingerprint.pb
tk_r_em/models/sfr_hrstem/variables/: variables.index
tk_r_em/models/sfr_hrtem/: fingerprint.pb  keras_metadata.pb
tk_r_em/models/sfr_hrtem/variables/: variables.index
tk_r_em/models/sfr_lrsem/: fingerprint.pb
tk_r_em/models/sfr_lrstem/: fingerprint.pb
tk_r_em/models/sfr_lrtem/: fingerprint.pb
training/: nn_fcns_local.py  nn_training.py  training_cgrdn.sh
tutorials/data/: hrstem_example.ser
(+3 files in other folders)
